--- a/ocr/src/main/resources/application.properties
+++ b/ocr/src/main/resources/application.properties
@@ -10,3 +10,17 @@ logging.config=classpath:logging-config.xml
 file.upload.path=/Users/zacky/Desktop/work/upload
 mybatis.type-aliases-package=com.chineseall.entity
 mybatis.mapper-locations=classpath:/mapping/*.xml
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=192.168.20.163
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-idle=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
