add tess train method

--- a/ocr/src/main/resources/application.properties
+++ b/ocr/src/main/resources/application.properties
@@ -10,3 +10,10 @@ logging.config=classpath:logging-config.xml
 file.upload.path=/Users/zacky/Desktop/work/upload
 mybatis.type-aliases-package=com.chineseall.entity
 mybatis.mapper-locations=classpath:/mapping/*.xml
+
+
+
+# tesseract config
+tesseract.path=/usr/local/bin
+tesseract.filePath=/Users/zacky/tess
+tesseract.langDataPath=/Volumes/Transcend/Tess/langdata
