--- a/ocr/src/main/resources/application.properties
+++ b/ocr/src/main/resources/application.properties
@@ -1,19 +1,17 @@
 server.port=9000
-spring.datasource.url=jdbc:mysql://192.168.20.163:3306/OCR?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://192.168.20.192:3306/OCR?useUnicode=true&characterEncoding=utf8
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Root!@34
-spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.prefix=classpath:/templates/
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=4MB
 logging.config=classpath:logging-config.xml
-file.upload.path=/Users/zacky/Desktop/work/upload
+#file.upload.path=/Users/zacky/Desktop/work/upload
+file.upload.path=/data/ocr/upload
 mybatis.type-aliases-package=com.chineseall.entity
 mybatis.mapper-locations=classpath:/mapping/*.xml
-
-
-
 # tesseract config
-tesseract.path=/usr/local/bin
-tesseract.filePath=/Users/zacky/tess
+#tesseract.path=/usr/local/bin
+tesseract.path=/usr/bin
 tesseract.langDataPath=/usr/local/share/tessdata
