--- a/common/pom.xml
+++ b/common/pom.xml
@@ -56,6 +56,11 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.im4java</groupId>
+            <artifactId>im4java</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 
