--- a/ocr/src/main/resources/application.properties
+++ b/ocr/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=9000
+spring.mvc.favicon.enabled=false
+#develop
+spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://192.168.20.192:3306/OCR?useUnicode=true&characterEncoding=utf8
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
@@ -7,11 +10,11 @@ spring.datasource.password=Root!@34
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=4MB
 logging.config=classpath:logging-config.xml
-#file.upload.path=/Users/zacky/Desktop/work/upload
-file.upload.path=/data/ocr/upload
+file.upload.path=/Volumes/Transcend/Work/upload
+#file.upload.path=/data/ocr/upload
 mybatis.type-aliases-package=com.chineseall.entity
 mybatis.mapper-locations=classpath:/mapping/*.xml
 # tesseract config
-#tesseract.path=/usr/local/bin
-tesseract.path=/usr/bin
+tesseract.path=/usr/local/bin
+#tesseract.path=/usr/bin
 tesseract.langDataPath=/usr/local/share/tessdata
