add image show api & optimize image handle api

--- a/ocr/src/main/resources/application.properties
+++ b/ocr/src/main/resources/application.properties
@@ -18,3 +18,9 @@ mybatis.mapper-locations=classpath:/mapping/*.xml
 tesseract.path=/usr/local/bin
 #tesseract.path=/usr/bin
 tesseract.langDataPath=/usr/local/share/tessdata
+#image2Binary
+cv.image2Binary=http://127.0.0.1:5000/image2Binary?filePath=FilePath&fileName=FileName
+#detect vertical line
+cv.vertical.line.detect=http://127.0.0.1:5000/detectVerticalLine?filePath=FilePath&page=Page
+#detect horizon line
+cv.horizon.line.detect=http://127.0.0.1:5000/detectHorizonLine?filePath=FilePath&page=Page
