--- a/ocr/src/main/resources/application.properties
+++ b/ocr/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.datasource.password=Root!@34
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 logging.config=classpath:logging-config.xml
-file.upload.path=/Volumes/Transcend/Work/upload
-#file.upload.path=/data/ocr/upload
+#file.upload.path=/Volumes/Transcend/Work/upload
+file.upload.path=/data/ocr/upload
 mybatis.type-aliases-package=com.chineseall.entity
 mybatis.mapper-locations=classpath:/mapping/*.xml
 # tesseract config
-tesseract.path=/usr/local/bin
-#tesseract.path=/usr/bin
+#tesseract.path=/usr/local/bin
+tesseract.path=/usr/bin
 tesseract.langDataPath=/usr/local/share/tessdata
 #image2Binary
 cv.image2Binary=http://127.0.0.1:5000/image2Binary?filePath=FilePath&fileName=FileName
