--- a/common/pom.xml
+++ b/common/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>tess4j</artifactId>
             <version>4.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
     </dependencies>
 
 
