add demo api & modify websocket api

--- a/ocr/src/main/resources/application-test.properties
+++ b/ocr/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-server.port=9000
+server.port=9001
 spring.mvc.favicon.enabled=false
 #develop
 spring.thymeleaf.cache=false
@@ -10,8 +10,8 @@ spring.datasource.password=Root!@34
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 logging.config=classpath:logging-config.xml
-file.upload.path=/Volumes/Transcend/Work/upload
-#file.upload.path=/data/ocr/upload
+#file.upload.path=/Volumes/Transcend/Work/upload
+file.upload.path=/data/ocr/upload
 mybatis.type-aliases-package=com.chineseall.entity
 mybatis.mapper-locations=classpath:/mapping/*.xml
 # tesseract config
